--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,10 @@
 <resources>
     <string name="app_name">НМедиа</string>
     <string name="nmedia">НМедиа!</string>
+    <string name="description_post_author_avatar">Аватар автора поста</string>
+    <string name="description_post_menu">Меню поста</string>
+    <string name="description_post_likes">Лайки поста</string>
+    <string name="description_post_shares">Репосты поста</string>
+    <string name="description_post_impressions">Просмотры поста</string>
+    <string name="description_post_impressions">П</string>
 </resources>
