--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,5 +7,13 @@
     <string name="description_post_likes">Лайки поста</string>
     <string name="description_post_shares">Репосты поста</string>
     <string name="description_post_impressions">Просмотры поста</string>
+    <string name="menu_remove">Удалить</string>
+    <string name="post_text">Текст поста</string>
+    <string name="menu_edit">Редактировать</string>
+    <string name="error_empty_content">Контент не может быть пустым</string>
+    <string name="save_button">Сохранить</string>
+    <string name="cancel_button">Отменить редактирование</string>
+    <string name="editing_mode">Редактирование</string>
+    <string name="editing">Редактирование</string>
 
 </resources>
