--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,5 +15,9 @@
     <string name="cancel_button">Отменить редактирование</string>
     <string name="editing_mode">Редактирование</string>
     <string name="editing">Редактирование</string>
+    <string name="chooser_share_post">Поделиться постом</string>
+    <string name="add_post">Добавить пост</string>
+    <string name="description_video_card">Заглушка для видео</string>
+    <string name="description_play_button">Проигрывание</string>
 
 </resources>
